# API-e2e-tests-examples

./: .gitignore  API #2.py  API #3 #4.py  API #3.py  API #5.py  allurerc.js  allurerc.mjs  chuck.py  chuck_OOP.py  history.jsonl  index.html  place.py  place_id.txt  place_id_new.txt  pyproject.toml  summary.json
.github/workflows/: e2e-api-tests.yaml
allure-results/: 0857c718-f845-4881-97a9-88c8eb343f2c-result.json  e13b0921-19f5-41e3-abb3-dbc75a8fb30d-attachment.txt
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 28f429c693b86922.txt  49906f319ad145cc.txt  a509ce76ba080bfe.txt  de6e8b01c96c980c.txt  e3c1fdfeffa94d33.txt  ec58dc51aceb9a0c.txt
data/test-cases/: 1b6aa44297c47bf4.json  2c880f4f015fbe0d.json  6d1855b1f0f2fb7.json  7079f846ac6afc3c.json  983b6d92c32ed6ab.json  9fdee83cddcf79a4.json  bb36ac3519cd2763.json  c8c9c484b5c8c81b.json  e446576f46dcd071.json  e904775b9eafb205.json  ef348095f668ac4d.json  fcd69ee2d645f7e6.json
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
pr-1/: index.html
pr-1/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
pr-1/export/: influxDbData.txt  prometheusData.txt
pr-1/history/: duration-trend.json  history.json
pr-1/widgets/: duration.json  severity.json  suites.json  summary.json
tests/: test_google_maps_api.py
widgets/: behaviors.json  charts.json  duration-trend.json  duration.json  globals.json  nav.json  severity.json  status-chart.json  summary.json  timeline.json  tree.json
(+20 files in other folders)
