[project]
name = "api-e2e-tests-examples"
version = "0.1.0"
description = "Example project for API e2e testing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.15.3",
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"